# rag-workshop-ssai_ksu

./: README.md  app.py  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
