[project]
name = "rag-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.2.1",
    "google-genai>=1.46.0",
    "ipykernel>=7.1.0",
    "ipython>=9.6.0",
    "print-arabic>=0.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]
